# esports-prediction

./: .gitignore  README.md  analysis.ipynb  autokeras_modelnewestdata.h5  autokeras_modelsolo2.keras  autokeras_modelsolo5.keras  autokeras_modelsolo6.keras  bets.xlsx  betting.py  comparing.py  create_db.py  curr_matches.py  dbpopulate.py  make_preds.py  making_trainingset.py  matches.csv  models.py  players1m.csv  pre_process_data.py  predictor.py  predictor2.py  predictor_old.py  preds.xlsx  preds1.xlsx  predsobstawione.xlsx  predsobstawionexlsx.xlsx  pyproject.toml  readmatches.py  readplayers.py  readteams.py  teamnames.csv  teams.csv  teamsAllStats2.csv  teamsAllValues.csv  teamsAllValues1.csv  teamsCurrValues.csv  tempCodeRunnerFile.py  trainnewmodel.py  xgb_matches1.json  xgb_matches2.json
vertopal.com_analysis/: README.md
